instagram and strava updates from 2016-12-05

--- a/instagram12.html
+++ b/instagram12.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000160.jpg" title="Enjoying a few more sunrise rides before the crushing blackness of #daylightsavingstime kicks in this weekend. #cycling #bicycle #moots #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Enjoying a few more sunrise rides before the crushing blackness of #daylightsavingstime kicks in this weekend. #cycling #bicycle #moots #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000160.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000161.jpg" title="Pre-dawn miles. #cycling #bicycle #moots #psychloX #lovestarbicyclebags #lakemichigan" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Pre-dawn miles. #cycling #bicycle #moots #psychloX #lovestarbicyclebags #lakemichigan</small>
+                           </div>
+                           <img src="../lsphotos/image000161.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000162.jpg" title="Gonna try getting #ontherivet with the #moots this gravel season. #gravelgrinder #gravel #bicycle #cycling #psychloX #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Gonna try getting #ontherivet with the #moots this gravel season. #gravelgrinder #gravel #bicycle #cycling #psychloX #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000162.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000163.jpg" title="Huge cargo capacity, and a flashy peacock blue interior. #handmade #lovestarbicyclebags #bicyclebag #bicycle #cycling" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>Such a stud...he didn't even need studded tire's. #dadjoke #fatbike #bikewinter #lovestarbicyclebags #lovestarfactoryteam #cycling</small>
                            </div>
                            <img src="../lsphotos/image000173.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000174.jpg" title="Fresh snow this morning with @agonz21 #fatbike #bikewinter #lovestarbicyclebags #bikepacking #bikepackingbags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fresh snow this morning with @agonz21 #fatbike #bikewinter #lovestarbicyclebags #bikepacking #bikepackingbags</small>
-                           </div>
-                           <img src="../lsphotos/image000174.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000175.jpg" title="Happy Valentines Day! #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Happy Valentines Day! #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000175.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000629.jpg" title="Yeah Dad #lovestarfactoryteam #cycling #focus" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Yeah Dad #lovestarfactoryteam #cycling #focus</small>
-                           </div>
-                           <img src="../lsphotos/image000629.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
