--- a/instagram13.html
+++ b/instagram13.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000174.jpg" title="Fresh snow this morning with @agonz21 #fatbike #bikewinter #lovestarbicyclebags #bikepacking #bikepackingbags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fresh snow this morning with @agonz21 #fatbike #bikewinter #lovestarbicyclebags #bikepacking #bikepackingbags</small>
+                           </div>
+                           <img src="../lsphotos/image000174.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000175.jpg" title="Happy Valentines Day! #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Happy Valentines Day! #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000175.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000629.jpg" title="Yeah Dad #lovestarfactoryteam #cycling #focus" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Yeah Dad #lovestarfactoryteam #cycling #focus</small>
+                           </div>
+                           <img src="../lsphotos/image000629.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000630.jpg" title="Frosty miles this morning. #cycling #lovestarfactoryteam #moots #psychloX" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>Couldn't resist a Daddy / Daughter #pogies shot. #handmade #bikewinter #fatbike #lovestarbicyclebags #SewRad </small>
                            </div>
                            <img src="../lsphotos/image000187.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000188.jpg" title="Finished these up Just in time for some wicked cold temps today. #lovestarbicyclebags #pogies #fatbike #bikewinter #handmade #SewRad " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished these up Just in time for some wicked cold temps today. #lovestarbicyclebags #pogies #fatbike #bikewinter #handmade #SewRad </small>
-                           </div>
-                           <img src="../lsphotos/image000188.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000189.jpg" title="Another angle. #fatbike #pogies #lovestarbicyclebags #bikepackingbags #SewRad " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Another angle. #fatbike #pogies #lovestarbicyclebags #bikepackingbags #SewRad </small>
-                           </div>
-                           <img src="../lsphotos/image000189.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000190.jpg" title="1st full sized pogie done. Fit seems pretty solid, time to assemble #2. #handmade #pogies #bikepackingbags #fatbike #lovestarbicyclebags #SewRad " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>1st full sized pogie done. Fit seems pretty solid, time to assemble #2. #handmade #pogies #bikepackingbags #fatbike #lovestarbicyclebags #SewRad </small>
-                           </div>
-                           <img src="../lsphotos/image000190.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
