--- a/instagram7.html
+++ b/instagram7.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000562.jpg" title="Wisconsin riding...#lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Wisconsin riding...#lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000562.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000563.jpg" title="Summer Love. #lovestarfactoryteam #theponyshop #moots #psychloX #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Summer Love. #lovestarfactoryteam #theponyshop #moots #psychloX #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000563.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000564.jpg" title="Nice kits...#lovestarfactoryteam #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Nice kits...#lovestarfactoryteam #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000564.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000565.jpg" title="#lovestarfactoryteam had their sock game on fleek this morning. #sockdoping #bicycle #cycling #bikechi" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>Sweet Friday morning double loop half century with Team Lovestar #lovestarbicyclebags #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000126.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000576.jpg" title="So proud watching this sweet THREE YEAR OLD ride her bike!?!?!! #bike #cycling #adorablegrandaughter #lovestarfactoryteam #lovestoride #futurecyclocrosschamp #amazing #proudgrandma #happyday" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>So proud watching this sweet THREE YEAR OLD ride her bike!?!?!! #bike #cycling #adorablegrandaughter #lovestarfactoryteam #lovestoride #futurecyclocrosschamp #amazing #proudgrandma #happyday</small>
-                           </div>
-                           <img src="../lsphotos/image000576.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000127.jpg" title="Cold May Morning. #cycling #bicycle #moots #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold May Morning. #cycling #bicycle #moots #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000127.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000129.jpg" title="Looks like summer...temps haven't quite caught on to the idea yet. #cycling #bicycle #moots #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Looks like summer...temps haven't quite caught on to the idea yet. #cycling #bicycle #moots #lovestarbicyclebags #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000129.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
