--- a/instagram24.html
+++ b/instagram24.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000287.jpg" title="I'm convinced that taking two kids on a bike ride to the local park takes almost as much planning and just as much equipment as your average #bikepacking expedition. #fatbike #cycling #bikechi #cyclist #bicycle #futurecyclist #adventuredad #lovestarbicyclebags #bicyclebag #babysnub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>I'm convinced that taking two kids on a bike ride to the local park takes almost as much planning and just as much equipment as your average #bikepacking expedition. #fatbike #cycling #bikechi #cyclist #bicycle #futurecyclist #adventuredad #lovestarbicyclebags #bicyclebag #babysnub</small>
+                           </div>
+                           <img src="../lsphotos/image000287.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000288.jpg" title="Took me a while to find a transportation solution for this bike...#RockyMounts came through with their brass knuckles roof rack. Keeps the bike up top in all of its monstrous glory. #fatbike #cyclistproblems #lovestarbicyclebags #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Took me a while to find a transportation solution for this bike...#RockyMounts came through with their brass knuckles roof rack. Keeps the bike up top in all of its monstrous glory. #fatbike #cyclistproblems #lovestarbicyclebags #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000288.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000289.jpg" title="Oasis. #moots #psychloX #cycling #cyclist #bicycle #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Oasis. #moots #psychloX #cycling #cyclist #bicycle #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000289.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000290.jpg" title="Big bird, big tires...happy Friday! #fatbikefriday #fatbike #bicycle #cycling #lovestarfactoryteam #bikechi #lovestarbicyclebags #handmade #bikepacking #framebag #seatbag #bicyclebag" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -232,45 +271,6 @@ Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #f
                               <small>Close up of the stitching...orange for days. #lovestarbicyclebags #handmade #framebag #bikepacking #bicycle #fatbike #bicyclebag #cycling #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000300.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000301.jpg" title="Still have some interior finishing to do, but this custom #lovestarbicyclebags frame bag is just about done. Color matched contrast stitching really makes for a nice tie in to the frame. #handmade #cycling #bicyclebag #bikepacking #fatbike #bicycle #bikechi #framebag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Still have some interior finishing to do, but this custom #lovestarbicyclebags frame bag is just about done. Color matched contrast stitching really makes for a nice tie in to the frame. #handmade #cycling #bicyclebag #bikepacking #fatbike #bicycle #bikechi #framebag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000301.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000736.jpg" title="Ah...the McClory path. Every time I ride it I want to find the city planners who designed it and say: &quot;whelp, I'm proud of you for trying.&quot; #fatbike #bikechi #bikecommute #cycling #cyclist #gravelgrinder #bicycle #bicyclebag #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Ah...the McClory path. Every time I ride it I want to find the city planners who designed it and say: "whelp, I'm proud of you for trying." #fatbike #bikechi #bikecommute #cycling #cyclist #gravelgrinder #bicycle #bicyclebag #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000736.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000737.jpg" title="Beautiful morning for a bike ride! #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Beautiful morning for a bike ride! #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000737.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
