--- a/instagram32.html
+++ b/instagram32.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000420.jpg" title="Leg is still on the mend...in the meantime cleaning up the steed at home. #moots #psychloX #cyclocross #cx #recovery #lovestarbicycles #lovestarbicyclebags #cycling #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Leg is still on the mend...in the meantime cleaning up the steed at home. #moots #psychloX #cyclocross #cx #recovery #lovestarbicycles #lovestarbicyclebags #cycling #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000420.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000421.jpg" title="So...race was tough yesterday, I was feeling good, but about half way through the race I botched a barrier landing and crashed hard. I was able to grit through it and finished 34th, but my leg was killing me an felt really weak. Went to the Dr. today and turns out I have a partial tear in my right quad. Gonna miss the next couple of races...but I should be able to finish out the latter part of the season. #cyclocross #cycling #sadtrombone #therules #rulenumber5 #bikechi #lovestarbicyclebags #lovestarbicycles" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>So...race was tough yesterday, I was feeling good, but about half way through the race I botched a barrier landing and crashed hard. I was able to grit through it and finished 34th, but my leg was killing me an felt really weak. Went to the Dr. today and turns out I have a partial tear in my right quad. Gonna miss the next couple of races...but I should be able to finish out the latter part of the season. #cyclocross #cycling #sadtrombone #therules #rulenumber5 #bikechi #lovestarbicyclebags #lovestarbicycles</small>
+                           </div>
+                           <img src="../lsphotos/image000421.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000422.jpg" title="Ride interrupted. #cx #cyclocross #cycling #bikechi #dprt #lovestarbicycles #lovestarbicyclebags #gravel #gravelriot #gravelgrinder" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Ride interrupted. #cx #cyclocross #cycling #bikechi #dprt #lovestarbicycles #lovestarbicyclebags #gravel #gravelriot #gravelgrinder</small>
+                           </div>
+                           <img src="../lsphotos/image000422.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000423.jpg" title="Regram from @chateauduwaggoner of today's race at Dan Ryan Woods. Lovestar Factory Team game face at the start of the 4/5 race. #drwcx #cyclocross #cycling #cx #lovestarbicycles #lovestarbicyclebags #chicago #chicagocrosscup #bikechi" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>Prototype Lovestar shop apron. Electric blue, Lime green and black turned out a bit more TRON inspired than I had anticipated, but still pretty sick. More pics going up on Facebook #lovestarbicycles #lovestarbicyclebags #handmade #cycling #bikeshop #sewrad #bikemechanic #biketools #wrenchlife</small>
                            </div>
                            <img src="../lsphotos/image000439.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000440.jpg" title="Sneak peak of something new coming off the Lovestar workbench...electric blue with lime green, because black is boring and just 'cause a guy's got to work doesn't mean you can't be rad in the workplace. #sewrad #lovestarbicycles #lovestarbicyclebags #handmade #madeinchicago #cycling #bikeshop #bikemechanic #blackisboring" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sneak peak of something new coming off the Lovestar workbench...electric blue with lime green, because black is boring and just 'cause a guy's got to work doesn't mean you can't be rad in the workplace. #sewrad #lovestarbicycles #lovestarbicyclebags #handmade #madeinchicago #cycling #bikeshop #bikemechanic #blackisboring</small>
-                           </div>
-                           <img src="../lsphotos/image000440.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000441.jpg" title="Boom. Giant Custom Lovestar frame bag. Lots of black with some lime green. #bikepacking #bikechi #bikebag #cycling #gravelgrinder #gravel #handmade #lovestarbicyclebags #lovestarbicycles #sewrad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Boom. Giant Custom Lovestar frame bag. Lots of black with some lime green. #bikepacking #bikechi #bikebag #cycling #gravelgrinder #gravel #handmade #lovestarbicyclebags #lovestarbicycles #sewrad</small>
-                           </div>
-                           <img src="../lsphotos/image000441.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000442.jpg" title="Starting the build process on a customer's custom frame bag. All black exterior with some poppin' lime interior. #bikepacking #lovestarbicyclebags #lovestarbicycles #handmade #madeinchicago #bikechi #cycling #gravelgrinder #gravel #framebag #bikebag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Starting the build process on a customer's custom frame bag. All black exterior with some poppin' lime interior. #bikepacking #lovestarbicyclebags #lovestarbicycles #handmade #madeinchicago #bikechi #cycling #gravelgrinder #gravel #framebag #bikebag</small>
-                           </div>
-                           <img src="../lsphotos/image000442.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
