--- a/instagram33.html
+++ b/instagram33.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000440.jpg" title="Sneak peak of something new coming off the Lovestar workbench...electric blue with lime green, because black is boring and just 'cause a guy's got to work doesn't mean you can't be rad in the workplace. #sewrad #lovestarbicycles #lovestarbicyclebags #handmade #madeinchicago #cycling #bikeshop #bikemechanic #blackisboring" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sneak peak of something new coming off the Lovestar workbench...electric blue with lime green, because black is boring and just 'cause a guy's got to work doesn't mean you can't be rad in the workplace. #sewrad #lovestarbicycles #lovestarbicyclebags #handmade #madeinchicago #cycling #bikeshop #bikemechanic #blackisboring</small>
+                           </div>
+                           <img src="../lsphotos/image000440.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000441.jpg" title="Boom. Giant Custom Lovestar frame bag. Lots of black with some lime green. #bikepacking #bikechi #bikebag #cycling #gravelgrinder #gravel #handmade #lovestarbicyclebags #lovestarbicycles #sewrad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Boom. Giant Custom Lovestar frame bag. Lots of black with some lime green. #bikepacking #bikechi #bikebag #cycling #gravelgrinder #gravel #handmade #lovestarbicyclebags #lovestarbicycles #sewrad</small>
+                           </div>
+                           <img src="../lsphotos/image000441.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000442.jpg" title="Starting the build process on a customer's custom frame bag. All black exterior with some poppin' lime interior. #bikepacking #lovestarbicyclebags #lovestarbicycles #handmade #madeinchicago #bikechi #cycling #gravelgrinder #gravel #framebag #bikebag" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Starting the build process on a customer's custom frame bag. All black exterior with some poppin' lime interior. #bikepacking #lovestarbicyclebags #lovestarbicycles #handmade #madeinchicago #bikechi #cycling #gravelgrinder #gravel #framebag #bikebag</small>
+                           </div>
+                           <img src="../lsphotos/image000442.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000443.jpg" title="Second bag of the night is this Rasta themed SaddlePack. Lots of little details on this one. #handmade #bikechi #bikepacking #bicycle #sewrad #cycling #madeinchicago #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>The arrival. #customkit #cycling #cyclocross #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000458.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000459.jpg" title="Finished up this set of SaddlePacks today. Clean bold colors makes for a nice group photo. #lovestarbicyclebags #handmade #madeinchicago #cycling #bikepacking #bikebag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up this set of SaddlePacks today. Clean bold colors makes for a nice group photo. #lovestarbicyclebags #handmade #madeinchicago #cycling #bikepacking #bikebag</small>
-                           </div>
-                           <img src="../lsphotos/image000459.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000460.jpg" title="Lovestar Saddle Pack out on the road. #lovestarbicyclebags #custom #handmade #bikechi #madeinchicago #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Saddle Pack out on the road. #lovestarbicyclebags #custom #handmade #bikechi #madeinchicago #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000460.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000461.jpg" title="More Lovestar Saddle Packs. Had some time off for some big life things...now time to get caught up on orders! #lovestarbicyclebags #cycling #bikechi #bikepacking #handmade #custom #sewawesome" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>More Lovestar Saddle Packs. Had some time off for some big life things...now time to get caught up on orders! #lovestarbicyclebags #cycling #bikechi #bikepacking #handmade #custom #sewawesome</small>
-                           </div>
-                           <img src="../lsphotos/image000461.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
